# counterparty-screening

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: checks.py
app/db/: migrations.py  session.py
app/models/: check.py
app/repositories/: __init__.py  checks.py
app/schemas/: check.py
app/services/: counterparty_service.py  risk.py
counterparty-screening-workflow/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
counterparty-screening-workflow/app/api/routes/: health.py
counterparty-screening-workflow/app/core/: config.py
counterparty-screening-workflow/app/db/: session.py
counterparty-screening-workflow/app/services/: adapters.py  summary.py
counterparty-screening-workflow/docs/: signal-model.md
counterparty-screening-workflow/frontend/: index.html  package.json  vite.config.js
counterparty-screening-workflow/frontend/src/: main.jsx  styles.css
counterparty-screening-workflow/frontend/src/api/__tests__/: client.test.js
counterparty-screening-workflow/frontend/src/components/: CheckForm.jsx  FeedbackBanner.jsx
counterparty-screening-workflow/migrations/: env.py
counterparty-screening-workflow/tests/: test_api.py
frontend/: Dockerfile  eslint.config.js
frontend/src/: App.jsx  App.test.jsx
frontend/src/api/: client.js
frontend/src/components/: CheckResultCard.jsx  RecentChecksPanel.jsx
migrations/versions/: 20250415_0001_initial_schema.py
tests/: conftest.py  test_risk.py
