[project]
name = "counterparty-screening-workflow"
version = "0.5.0"
description = "Full-stack application for deterministic counterparty screening with a FastAPI backend and React frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.37",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.8.0",
  "alembic>=1.15.2",
  "psycopg[binary]>=3.2.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.3"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*", "migrations*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
